changed title of syllabus post

--- a/_posts/2020-12-24-syllabus/syllabus.Rmd
+++ b/_posts/2020-12-24-syllabus/syllabus.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Market Design"
+title: "Course Introduction"
 description: |
   Economics at the Intersection of Data and Technology
 author:
