first version for release to class - making draft everything except rstudio conf

--- a/_posts/2020-12-24-syllabus/syllabus.Rmd
+++ b/_posts/2020-12-24-syllabus/syllabus.Rmd
@@ -18,6 +18,7 @@ categories:
   - Homo Economicus
   - Behavioral Economics
 preview: https://db0ip7zd23b50.cloudfront.net/dims4/default/0dfba66/2147483647/legacy_thumbnail/960x369%3E/quality/90/?url=http%3A%2F%2Fbloomberg-bna-brightspot.s3.amazonaws.com%2F43%2F5e%2F9afb1c354b0e8ee71a13c737d4f5%2Fgettyimages-921135480.jpg
+draft: true
 ---
 
 
