fixed preview graphic for first day of class

--- a/_posts/2021-01-17-classsurvey/classsurvey.Rmd
+++ b/_posts/2021-01-17-classsurvey/classsurvey.Rmd
@@ -9,6 +9,8 @@ date: 01-17-2021
 output:
   distill::distill_article:
     self_contained: false
+preview: https://rstudio.com/assets/img/rstudio-global-with-date.jpg
+  
 ---
 
 
